# genro-wopi

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  publish.yml  tests.yml
client_demo/: README.md  demo_server.py  docker-compose.yml  index.html  index_collabora.html  index_onlyoffice.html  run_server.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIGRATION_TO_PROXY.md  SESSION_ENTITIES.md  WOPI_ARCHITECTURE.md  conf.py  core.wopi_server.rst  index.rst  modules.rst
src/core/: __init__.py
src/core/wopi_server/: __init__.py  server.py  wopi_base.py  wopi_config.py  wopi_proxy.py
src/core/wopi_server/entities/: __init__.py
src/core/wopi_server/entities/command_log/: __init__.py  endpoint.py
src/core/wopi_server/entities/instance/: __init__.py  endpoint.py  table.py
src/core/wopi_server/entities/session/: __init__.py  endpoint.py  table.py
src/core/wopi_server/entities/storage/: __init__.py  endpoint.py
src/core/wopi_server/entities/tenant/: endpoint.py  table.py
src/core/wopi_server/interface/: __init__.py  api_base.py  endpoint_base.py
src/core/wopi_server/templates/: empty.odt  empty.pptx
src/genro_wopi/: __init__.py  server.py  wopi_proxy.py
src/genro_wopi/entities/: __init__.py
src/genro_wopi/entities/tenant/: __init__.py  endpoint.py  table.py
src/genro_wopi/entities/wopi_session/: __init__.py  endpoint.py  table.py
src/genro_wopi/http_client/: __init__.py
src/genro_wopi/templates/: empty.docx  empty.odp  empty.ods  empty.xlsx
src/sql/: sqldb.py
src/sql/adapters/: base.py
src/storage/: __init__.py  node.py
src/tools/: __init__.py
src/tools/http_client/: client.py
tests/: conftest.py
tests/core/wopi_server/entities/session/: test_endpoint.py  test_table.py
tests/core/wopi_server/interface/: __init__.py  test_wopi_endpoints.py
tests/genro_wopi/: test_server.py  test_wopi_proxy.py
tests/genro_wopi/entities/tenant/: test_endpoint.py  test_table.py
tests/genro_wopi/entities/wopi_session/: test_endpoint.py  test_table.py
tests/genro_wopi/http_client/: test_client.py
