# Copyright 2025 Softwell S.r.l.
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-wopi"
version = "0.1.0"
description = "WOPI (Web Application Open Platform Interface) implementation for the Genropy framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Genropy Team"}
]
keywords = [
    "wopi",
    "office",
    "collabora",
    "libreoffice",
    "document-editing",
    "genro",
    "genropy"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
]
all = [
    "genro-wopi[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/genropy/genro-wopi"
Documentation = "https://genro-wopi.readthedocs.io"
Repository = "https://github.com/genropy/genro-wopi"
Issues = "https://github.com/genropy/genro-wopi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genro_wopi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=genro_wopi --cov-report=term-missing --cov-report=html --cov-report=xml"
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B008",   # no function calls in arg defaults
]

[tool.ruff.lint.isort]
known-first-party = ["genro_wopi"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src/genro_wopi"]

[tool.coverage.run]
source = ["src/genro_wopi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
